[gd_scene load_steps=3 format=3 uid="uid://dxygxdrher51i"]

[ext_resource type="Script" uid="uid://nwvcqp8m44g2" path="res://PotionMaking/PotionSelect/potion_select_item.gd" id="1_hre3t"]

[sub_resource type="LabelSettings" id="LabelSettings_hre3t"]
font_size = 49
outline_size = 4

[node name="PotionSelectItem" type="Panel"]
anchors_preset = -1
anchor_right = 0.012
anchor_bottom = 0.006
offset_right = 102.72
offset_bottom = 129.28
mouse_filter = 1
script = ExtResource("1_hre3t")

[node name="PotionIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 400.0

[node name="SelectButton" type="Button" parent="PotionIcon"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 400.0
offset_bottom = 400.0
mouse_filter = 1

[node name="PotionNameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 400.0
offset_right = 362.0
offset_bottom = 468.0
label_settings = SubResource("LabelSettings_hre3t")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
